# GameEngine

./: CMakeLists.txt  Engine.cpp  Engine.h  Readme.md  main.cpp
Engine/: CMakeLists.txt
Engine/Core/: CMakeLists.txt
Engine/Core/FileHandling/: CMakeLists.txt  FileHandling.cpp  FileHandling.h
Engine/Core/InputHandling/: CMakeLists.txt  InputHandling.cpp  InputHandling.h
Engine/Core/Rendering/: CMakeLists.txt  Renderer.h  RendererStructures.h
Engine/Core/Rendering/OpenGL/: CMakeLists.txt  Mesh.cpp  Mesh.h  OpenGLRenderer.cpp  OpenGLRenderer.h  glad.c
Engine/Core/Rendering/Vulkan/: CMakeLists.txt  Mesh.cpp  Mesh.h  Utilities.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanValidation.cpp  VulkanValidation.h
Engine/Core/Window/: CMakeLists.txt  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h
Engine/Shaders/: CMakeLists.txt  CompileShaders.bat  base.frag  base.vert  openglBase.frag  openglBase.vert
Engine/Shaders/OpenGL/: base.frag  base.vert
Engine/Shaders/Vulkan/: base.frag  base.vert
Libraries/x86/include/GLAD/: glad.h
